Update integration test to test and properly clear storage accounts